# BackEnd

./: README.md
Database/: camera_guard_business.sql  camera_guard_history.sql
Document/: CameraGuard设计文档.docx  Packet.nsi  http接口文档.docx  项目生成.txt
Document/CloudAndEdge/: Could and Edge Computing.vsdx
Project/: CMakeLists.txt
Project/Basic/: CMakeLists.txt
Project/Basic/cmake/: common_settings.cmake  msvc_environment_settings.cmake
Project/Basic/src/: Base64.h  Basic.h  Conversion.h  CrossPlat.h  Encrypt.cpp  Encrypt.h  File.h  Function.h  Guuid.h  IceDuplexClient.h  LinuxPing.cpp  LinuxPing.h  MessageQueue.h  SafeList.h  SafeMap.h  Singleton.h  Stream.h  ThreadObject.h  ThreadPool.h  Time.h  Url.h  Util.h  WindowsPing.cpp  WindowsPing.h  iceSimpleClient.h
Project/CameraGuard/: CMakeLists.txt
Project/CameraGuard/Ice Files/: Compare.ice  Task.ice
Project/CameraGuard/Src/: Servce.cpp  Servce.h  main.cpp
Project/CameraGuard/Src/Cache/: CacheDefine.h
Project/CameraGuard/Src/Cache/Camera/: CameraState.cpp  CameraState.h  DiscoverCamera.cpp  DiscoverCamera.h
Project/CameraGuard/Src/Cache/ConnectionPool/: DatabaseConnPool.cpp  DatabaseConnPool.h
Project/CameraGuard/Src/Cache/Session/: Session.cpp  Session.h
Project/CameraGuard/Src/Client/: CompareClient.cpp  CompareClient.h  CompareClientImpl.cpp  CompareClientImpl.h  TaskClient.cpp  TaskClient.h  TaskClientImpl.cpp  TaskClientImpl.h
Project/CameraGuard/Src/Config/: ConfigFile.h  GlobalConfig.cpp  GlobalConfig.h
Project/CameraGuard/Src/ErrorInfo/: ErrorCode.h  ErrorMessage.cpp
Project/CameraGuard/Src/Interface/: Camera.cpp  Camera.h  History.cpp  History.h  Interface.h  Library.cpp  Library.h  Person.cpp  Person.h  SystemConfig.cpp  SystemConfig.h  Task.cpp  Task.h  User.cpp  User.h
Project/CameraGuard/Src/Network/: LibeventClient.cpp  LibeventClient.h  LibeventServer.cpp  LibeventServer.h
Project/CameraGuard/Src/TTS/: TTSManager.cpp  TTSManager.h
Project/CameraGuard/Src/Task/: TaskManager.cpp  TaskManager.h  TaskPara.cpp  TaskPara.h
Project/CameraGuard/Src/Task/Process/: SaveResult.cpp  SaveResult.h  TaskResult.cpp  TaskResult.h
Project/CameraGuard/Version/: Version.rc
Project/CameraGuard/cmake/: common_settings.cmake  linux_environment_settings.cmake  msvc_environment_settings.cmake
Project/CameraGuard/conf/: compare.client  config.json  log.conf  task.client
Project/Common/: JsonHelper.h  Macro.h  SociHelp.h
Project/CompareServer/: CMakeLists.txt
Project/CompareServer/Src/: main.cpp
Project/CompareServer/Src/Config/: ConfigFile.h  GlobalConfig.h
Project/CompareServer/Src/ErrorInfo/: ErrorCode.h  ErrorMessage.cpp  ErrorMessage.h
Project/CompareServer/Src/Http/: LibcurlHelper.h
Project/CompareServer/Src/Server/: ServerImpl.cpp  ServerImpl.h
Project/CompareServer/Version/: Version.rc
Project/CompareServer/cmake/: common_settings.cmake  linux_environment_settings.cmake  msvc_environment_settings.cmake
Project/CompareServer/conf/: compare.server  log.conf
Project/CompareServer1/: CMakeLists.txt
Project/CompareServer1/Src/: Compare.h  Library.h  Server.cpp  Server.h  main.cpp
Project/CompareServer1/Src/Config/: ConfigFile.h  GlobalConfig.cpp  GlobalConfig.h
Project/CompareServer1/Src/Network/: LibeventClient.cpp  LibeventClient.h  LibeventServer.cpp  LibeventServer.h
Project/CompareServer1/cmake/: common_settings.cmake  msvc64_environment_settings.cmake  msvc_environment_settings.cmake
Project/CompareServer1/conf/: config.json  log.conf
Project/StorageServer/: CMakeLists.txt
Project/StorageServer/Src/: HttpServer.cpp  HttpServer.h  main.cpp
Project/StorageServer/Src/Config/: ConfigFile.h  GlobalConfig.cpp  GlobalConfig.h
Project/StorageServer/Src/File/: FileHandle.cpp  FileHandle.h  FileManager.cpp  FileManager.h
Project/StorageServer/Version/: Version.rc
Project/StorageServer/cmake/: common_settings.cmake  msvc_environment_settings.cmake
Project/StorageServer/conf/: storage_server.conf  storage_server_log.conf
Project/TaskServer/: CMakeLists.txt
Project/TaskServer/Src/: main.cpp
Project/TaskServer/Src/Client/: CompareClient.cpp  CompareClient.h  CompareClientImpl.cpp  CompareClientImpl.h
Project/TaskServer/Src/Config/: ConfigFile.h  GlobalConfig.cpp  GlobalConfig.h
Project/TaskServer/Src/ErrorInfo/: ErrorCode.h
Project/TaskServer/Src/Http/: LibcurlHelper.cpp
Project/TaskServer/Src/Rtsp/: RtspStreamHelper.cpp  RtspStreamHelper.h
Project/TaskServer/Src/Server/: ServerImpl.cpp  ServerImpl.h
Project/TaskServer/Src/Task/: StreamHandle.cpp  StreamHandle.h  Task.cpp  Task.h  TaskDefines.h  TaskManager.cpp  TaskManager.h
Project/TaskServer/Version/: Version.h.in  Version.rc
Project/TaskServer/cmake/: common_settings.cmake  ice_compile_settings.cmake  msvc_environment_settings.cmake
Project/TaskServer/conf/: log.conf  task.server
Project/Test/CurlTest/: CMakeLists.txt
Project/Test/CurlTest/Src/: LibcurlHelper.cpp  main.cpp
Project/Test/CurlTest/cmake/: common_settings.cmake  linux_environment_settings.cmake  msvc_environment_settings.cmake
Project/Test/OnvifTest/: CMakeLists.txt
Project/Test/OnvifTest/Src/: main.cpp
Project/Test/OnvifTest/cmake/: common_settings.cmake  linux_environment_settings.cmake  msvc_environment_settings.cmake
Project/Test/SociTest/: CMakeLists.txt
Project/Test/SociTest/Src/: main.cpp
Project/Test/SociTest/cmake/: common_settings.cmake  linux_environment_settings.cmake  msvc_environment_settings.cmake
Project/cmake/: CMakeLists.txt  global_setting.cmake  utilities.cmake
